# Packet28

./: .cursorignore  .gitignore  .mcp.json  .npmrc  2026-02-23-001458-implement-the-following-plan.txt  Cargo.toml  NOTICE  README.md  coverage.lcov  covy-benchmark-review.md  covy.toml  covy.toml.example  deny.toml  package-lock.json  package.json
JavaTest/: annotations.sarif  covy.toml  pom.xml  pr-comment.md
autoresearch/: README.md  program.md  results.tsv  run_eval.sh
benchmarks/: README.md  generate_fixtures.sh  run.sh  (+3 more)
crates/buildy-core/: Cargo.toml
crates/buildy-core/src/: lib.rs  parse.rs  tests.rs  types.rs
crates/buildy-core/tests/: reducer_smoke.rs
crates/context-kernel-core/: Cargo.toml
crates/context-kernel-core/src/: agenty_runtime.rs  broker_memory_runtime.rs  contextq_runtime.rs  correlation_runtime.rs  diff_runtime.rs  governance_runtime.rs  kernel_registry.rs  kernel_runtime.rs  kernel_types.rs  lib.rs  reactive_runtime.rs  tests.rs  tool_reducers_runtime.rs
crates/context-memory-core/: Cargo.toml
crates/context-memory-core/src/: cache.rs  lib.rs  normalize.rs  persist.rs  recall.rs  recall_document.rs  types.rs
crates/contextq-core/: Cargo.toml
crates/contextq-core/src/: assemble.rs  lib.rs
crates/contextq-core/tests/: fixture_assembly.rs
crates/contextq-core/tests/fixtures/: packet_a.json  packet_b.json  packet_budget.json
crates/covy-cli/: Cargo.toml
crates/covy-cli/src/: cmd_annotate.rs  cmd_check.rs  cmd_comment.rs  cmd_common.rs  cmd_diff.rs  cmd_doctor.rs  cmd_github.rs  cmd_impact.rs  cmd_ingest.rs  cmd_init.rs  cmd_map_paths.rs  cmd_merge.rs  cmd_pr.rs  cmd_report.rs  cmd_shard.rs  cmd_testmap.rs  main.rs  shard_timing.rs
crates/covy-cli/tests/: e2e_test.rs
crates/covy-core/: Cargo.toml
crates/covy-core/src/: cache.rs  config.rs  diagnostics.rs  diff.rs  error.rs  gate.rs  impact.rs  lib.rs  merge.rs  model.rs  pathmap.rs  report.rs  shard.rs  snapshot.rs  testmap.rs
crates/covy-core/tests/: diff_test.rs  gate_test.rs
crates/covy-ingest/: Cargo.toml
crates/covy-ingest/benches/: ingest_bench.rs
crates/covy-ingest/src/: cobertura.rs  gocov.rs  jacoco.rs  lcov.rs  lib.rs  llvmcov.rs  sarif.rs
crates/covy-ingest/tests/: ingest_test.rs
crates/diffy-cli/: Cargo.toml
crates/diffy-cli/src/: cmd_analyze.rs  main.rs
crates/diffy-cli/tests/: e2e_smoke.rs
crates/guardy-core/: Cargo.toml
crates/guardy-core/src/: audit.rs  lib.rs  tests.rs  types.rs  validate.rs
crates/guardy-core/tests/: fixture_policy.rs
crates/guardy-core/tests/fixtures/: denied_packet.json  invalid_context.yaml  valid_context.yaml
crates/mapy-core/: Cargo.toml
crates/mapy-core/src/: ast.rs  lib.rs  runtime.rs  scan.rs  tests.rs  types.rs
crates/packet28-daemon-core/: Cargo.toml
crates/packet28-daemon-core/src/: broker_types.rs  context_store_types.rs  daemon_protocol.rs  hook_types.rs  index_types.rs  integrity.rs  lib.rs  paths.rs  storage.rs  task_types.rs  trust.rs
crates/packet28-reducer-core/: Cargo.toml
crates/packet28-reducer-core/src/: command.rs  filter.rs  fs.rs  git.rs  github.rs  go.rs  infra.rs  javascript.rs  lib.rs  python.rs  read.rs  rust.rs  search.rs  tee.rs  tests.rs  types.rs
crates/packet28-reducer-core/src/parser/: mod.rs  types.rs
crates/packet28-search-cli/: Cargo.toml
crates/packet28-search-cli/src/: main.rs
crates/packet28-search-cli/tests/: e2e.rs
crates/packet28-search-core/: Cargo.toml
crates/packet28-search-core/src/: generated_pair_weights.rs  lib.rs  weights.rs
crates/packet28d/: Cargo.toml
crates/packet28d/src/: broker_context.rs  broker_handoff.rs  broker_limits.rs  broker_ops.rs  broker_render.rs  broker_search.rs  broker_search_plan.rs  broker_snapshot.rs  broker_support.rs  commands.rs  hooks.rs  index.rs  launch.rs  main.rs  planning.rs  runtime_files.rs  server.rs  state.rs  tests.rs  watch.rs
crates/stacky-core/: Cargo.toml
crates/stacky-core/src/: lib.rs  parse.rs  tests.rs  types.rs
crates/stacky-core/tests/: reducer_smoke.rs
crates/suite-cli/: Cargo.toml  build.rs
crates/suite-cli/src/: agent_surface.rs  broker_client.rs  ccusage.rs  cli_defs.rs  cli_runtime.rs  cmd_agent_prompt.rs  cmd_build.rs  cmd_common.rs  cmd_common_machine.rs  cmd_common_machine_support.rs  cmd_common_runtime.rs  cmd_compact.rs  cmd_context.rs  cmd_context_kernel.rs  cmd_context_recall.rs  cmd_context_state.rs  cmd_context_store.rs  cmd_cover.rs  cmd_daemon.rs  cmd_daemon_client.rs  cmd_daemon_commands.rs  cmd_diff.rs  cmd_discover.rs  cmd_doctor.rs  cmd_guard.rs  cmd_hook.rs  cmd_impact.rs  cmd_learn.rs  cmd_map.rs  cmd_map_query.rs  cmd_map_repo.rs  cmd_mcp.rs  cmd_mcp_native.rs  cmd_mcp_prompt_resource.rs  cmd_mcp_proxy.rs  cmd_mcp_proxy_catalog.rs  cmd_mcp_proxy_upstream.rs  cmd_mcp_support.rs  cmd_mcp_transport.rs  cmd_packet.rs  (+12 more)
crates/suite-cli/tests/: e2e_smoke.rs  setup_e2e.rs
crates/suite-foundation-core/: Cargo.toml
crates/suite-foundation-core/src/: cache.rs  config.rs  config_edit.rs  coverage_store.rs  diagnostics_store.rs  doctor.rs  gate_cache.rs  lib.rs  path_diagnose.rs  pathmap.rs  repo_fingerprint.rs  repo_identity.rs  snapshot.rs  testmap_store.rs  timing_store.rs
crates/suite-ingest/: Cargo.toml
crates/suite-ingest/src/: lib.rs
crates/suite-packet-core/: Cargo.toml
crates/suite-packet-core/src/: agent.rs  context.rs  coverage.rs  diagnostics.rs  diff.rs  envelope.rs  gate.rs  lib.rs  machine.rs  merge.rs  registry.rs  shard.rs
crates/suite-policy-core/: Cargo.toml
crates/suite-policy-core/src/: lib.rs  tests.rs  types.rs  validate.rs
crates/testy-cli/: Cargo.toml
crates/testy-cli-common/: Cargo.toml
crates/testy-cli-common/src/: adapters.rs  impact.rs  lib.rs  shard.rs  support.rs  testmap.rs
crates/testy-cli/src/: cmd_common.rs  cmd_impact.rs  cmd_testmap.rs  main.rs
crates/testy-cli/tests/: e2e_smoke.rs
crates/testy-core/: Cargo.toml
crates/testy-core/src/: command_impact.rs  command_shard.rs  command_testmap.rs  impact.rs  lib.rs  merge.rs  pipeline.rs  pipeline_shard.rs  pipeline_testmap.rs  shard.rs  shard_timing.rs
(+283 files in other folders)
