[workspace]
members = ["crates/covy-core", "crates/covy-ingest", "crates/covy-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Core
roaring = "0.10"
blake3 = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"
toml_edit = "0.22"
bincode = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
glob = "0.3"

# HTTP
ureq = { version = "3", features = ["json"] }

# FS
ignore = "0.4"

# Dev
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
