[workspace]
members = ["crates/covy-core", "crates/covy-ingest", "crates/covy-cli", "crates/diffy-cli", "crates/testy-cli", "crates/suite-packet-core", "crates/suite-foundation-core", "crates/suite-policy-core", "crates/suite-proxy-core", "crates/suite-ingest", "crates/mapy-core", "crates/diffy-core", "crates/testy-core", "crates/suite-cli", "crates/testy-cli-common", "crates/guardy-core", "crates/contextq-core", "crates/context-kernel-core", "crates/context-memory-core", "crates/context-scheduler-core", "crates/stacky-core", "crates/buildy-core", "crates/packet28-daemon-core", "crates/packet28-reducer-core", "crates/packet28d"]
resolver = "2"

[workspace.package]
version = "0.2.22"
edition = "2021"
license = "MIT"
rust-version = "1.75"
description = "Fast Rust CLI for coverage and diagnostics gating"
repository = "https://github.com/usharma123/Covy"
homepage = "https://github.com/usharma123/Covy"

[workspace.dependencies]
# Core
roaring = "0.10"
blake3 = "1"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
bincode = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
glob = "0.3"
notify = "8"

# HTTP
ureq = { version = "3", features = ["json"] }

# FS
ignore = "0.4"

# Dev
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
