[package]
name = "context-kernel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
guardy-core = { version = "0.2.0", path = "../guardy-core" }
contextq-core = { version = "0.2.0", path = "../contextq-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
