[package]
name = "context-memory-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
bincode.workspace = true

[dev-dependencies]
tempfile.workspace = true
