[package]
name = "covy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "covy"
path = "src/main.rs"

[dependencies]
covy-ingest = { version = "0.2.0", path = "../covy-ingest" }
diffy-core = { version = "0.2.0", path = "../diffy-core" }
testy-core = { version = "0.2.0", path = "../testy-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
glob.workspace = true
ureq.workspace = true
quick-xml.workspace = true
toml.workspace = true
toml_edit.workspace = true
roaring.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
