[package]
name = "covy-core"
version.workspace = true
edition.workspace = true

[dependencies]
roaring.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bincode.workspace = true
regex.workspace = true
tracing.workspace = true
ignore.workspace = true
colored.workspace = true
comfy-table.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
