[package]
name = "guardy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
glob.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
