[package]
name = "mapy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
ignore.workspace = true
bincode.workspace = true
tree-sitter = "0.25"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile.workspace = true
