[package]
name = "packet28-daemon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
context-kernel-core = { version = "0.2.0", path = "../context-kernel-core" }
context-memory-core = { version = "0.2.0", path = "../context-memory-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }

[dev-dependencies]
tempfile.workspace = true
