[package]
name = "packet28-search-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bincode.workspace = true
ignore.workspace = true
memmap2.workspace = true
regex.workspace = true
regex-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
packet28-reducer-core = { version = "0.2.0", path = "../packet28-reducer-core" }

[dev-dependencies]
tempfile.workspace = true
