[package]
name = "packet28d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "packet28d"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
context-kernel-core = { version = "0.2.0", path = "../context-kernel-core" }
context-memory-core = { version = "0.2.0", path = "../context-memory-core" }
diffy-core = { version = "0.2.0", path = "../diffy-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
covy-ingest = { version = "0.2.0", path = "../covy-ingest" }
glob.workspace = true
notify.workspace = true
packet28-daemon-core = { version = "0.2.0", path = "../packet28-daemon-core" }
serde.workspace = true
serde_json.workspace = true
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
testy-core = { version = "0.2.0", path = "../testy-core" }
blake3.workspace = true
