[package]
name = "stacky-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
blake3.workspace = true
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
