[package]
name = "suite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "suite"
path = "src/main.rs"

[dependencies]
testy-cli-common = { version = "0.2.0", path = "../testy-cli-common" }
diffy-core = { version = "0.2.0", path = "../diffy-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
covy-ingest = { version = "0.2.0", path = "../covy-ingest" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
