[package]
name = "suite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "Packet28"
path = "src/main.rs"

[dependencies]
testy-cli-common = { version = "0.2.0", path = "../testy-cli-common" }
diffy-core = { version = "0.2.0", path = "../diffy-core" }
testy-core = { version = "0.2.0", path = "../testy-core" }
guardy-core = { version = "0.2.0", path = "../guardy-core" }
contextq-core = { version = "0.2.0", path = "../contextq-core" }
context-kernel-core = { version = "0.2.0", path = "../context-kernel-core" }
context-memory-core = { version = "0.2.0", path = "../context-memory-core" }
stacky-core = { version = "0.2.0", path = "../stacky-core" }
buildy-core = { version = "0.2.0", path = "../buildy-core" }
mapy-core = { version = "0.2.0", path = "../mapy-core" }
suite-proxy-core = { version = "0.2.0", path = "../suite-proxy-core" }
suite-ingest = { version = "0.2.0", path = "../suite-ingest" }
suite-policy-core = { version = "0.2.0", path = "../suite-policy-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
packet28-daemon-core = { version = "0.2.0", path = "../packet28-daemon-core" }
packet28-reducer-core = { version = "0.2.0", path = "../packet28-reducer-core" }
covy-ingest = { version = "0.2.0", path = "../covy-ingest" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
blake3.workspace = true
shell-words.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
