[package]
name = "suite-foundation-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
roaring.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
bincode.workspace = true
glob.workspace = true
ignore.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
