[package]
name = "testy-cli-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
covy-ingest = { version = "0.2.0", path = "../covy-ingest" }
diffy-core = { version = "0.2.0", path = "../diffy-core" }
testy-core = { version = "0.2.0", path = "../testy-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }

[dev-dependencies]
tempfile.workspace = true
