[package]
name = "testy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "testy"
path = "src/main.rs"

[dependencies]
testy-cli-common = { version = "0.2.0", path = "../testy-cli-common" }
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
