[package]
name = "testy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
suite-packet-core = { version = "0.2.0", path = "../suite-packet-core" }
suite-foundation-core = { version = "0.2.0", path = "../suite-foundation-core" }
roaring.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
glob.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tempfile.workspace = true
